# medical-imaging

./: .dockerignore  .env  .env.example  .gitignore  AGENT_DOCS.md  Dockerfile  Dockerfile.backend  README.md  architecture.md  clod_upload.py  docker-compose.yml  extract_imports.py  file_uploader.py  imports.txt  main.py  pyproject.toml  requirements.txt  start_backend.bat  start_frontend.bat  streamlit_app.py
Notebook/: MedX.ipynb
app/: config.py  logger_setup.py  main.py
app/database/: models.py  review_queue.py  session_logger.py
app/database/migrations/: env.py
app/database/migrations/versions/: 001_create_sessions_table.py
app/ingestion/: anonymizer.py  converter.py  dicom_loader.py  preprocessor.py
app/prediction/: cnn_fallback.py  ct_chat_client.py  medgemma_client.py  mr_classifier.py  predictor.py  xray_classifier.py
app/reporting/: gemini_reporter.py  llm_explainer.py  report_builder.py  report_template.md  rev_req_rules.py  summarizer.py
app/schemas/: prediction_schema.py  session_schema.py
app/segmentation/: image_segmenter.py  lungmask_client.py  mask_parser.py  mri_segmenter.py  totalseg_konfai_client.py  triton_client.py  vista3d_client.py
app/utils/: exceptions.py  file_utils.py  logger.py
backend/: config.py  main.py
backend/agents/: agent1_medical_image.py  agent2_visual_explanation.py  agent3_report.py  orchestrator.py  state.py
backend/database/: db.py  init.sql  models.py  schemas.py
backend/ml/: gradcam.py  model_loader.py  predictor.py  preprocessor.py
backend/reports/: drive_uploader.py  pdf_generator.py
backend/routers/: patients.py  physicians.py  sessions.py  technicians.py
frontend/: Dockerfile  package-lock.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: PipelineProgress.tsx  ResultPanel.tsx  SessionHistory.tsx  SummaryPanel.tsx  UploadForm.tsx
frontend/lib/: api.ts
