[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-ai-agent"
version = "0.1.0"
description = "AI-driven clinical agent for automated radiology segmentation and report generation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Prajeet Ragav Ravichandran" }
]
dependencies = [
    # Core Web Framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    # Medical Imaging & AI
    "pydicom==2.4.4",
    "monai==1.3.0",
    "nibabel==5.2.1",
    "numpy==1.26.4",
    "scipy==1.13.0",
    # Database & Persistence
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    # External APIs & Clients
    "httpx==0.27.0",
    "tritonclient[http]==2.44.0",
    "google-generativeai", # Added for your free Prediction/Report API
    # Utilities & Logging
    "python-dotenv==1.0.1",
    "structlog==24.1.0",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medical_agent"]

[tool.ruff]
line-length = 88
target-version = "py312"
